# tqdm-stubs

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.rst  cookiecutter_replay.json  flake.nix  pylintrc  pyproject.toml  script.py
tests/: test_main.yaml
tqdm-stubs/: __init__.pyi
